	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
	        gates)

	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

    PIG-1198: performance improvements through use of unsorted input splits that span multiple files (yanz)

  BUG FIXES

    PIG-1342 Avoid making unnecessary name node calls for writes in Zebra (chaow via yanz) 

    PIG-1356 TableLoader makes unnecessary calls to build a Job instance that create a new JobClient in the hadoop 0.20.9 (yanz)

    PIG-1349 Hubson test failure in test case TestBasicUnion (xuefuz via yanz)

    PIG-1340 The zebra version number should be changed from 0.7 to 0.8 (yanz)

    PIG-1318 Invalid type for source_table field when using order-preserving Sorted Table Union (gauravj via yanz)

    PIG-1258 Number of sorted input splits is unusually high (yanz)

    PIG-1269 Restrict schema definition for collection (xuefuz via yanz)

    PIG-1253: make map/reduce test cases run on real cluster (chaow via yanz)

    PIG-1276: Pig resource schema interface changed, so Zebra needs to catch exception thrown from the new interfaces. (xuefuz via yanz)

    PIG-1256: Bag field should always contain a tuple type as the field schema in ResourceSchema object converted from Zebra Schema (xuefuz via yanz)

    PIG-1227: Throw exception if column group meta file is missing for an unsorted table (yanz)

    PIG-1201: unnecessary name node calls by each mapper; too big input split serialization size by Pig's Slice implementation (yanz)

    PIG-1115: cleanup of temp files left by failed tasks (gauravj via yanz)

    PIG-1167: Hadoop file glob support (yanz)

    PIG-1153: Record split exception fix (yanz)

    PIG-1145: Merge Join on Large Table throws an EOF exception (yanz)

    PIG-1095: Schema support of anonymous fields in COLECTION fails (yanz via
	gates)
